Add RC3 as a build target and use my rsync-sbt plugin.

--- a/project/build.properties
+++ b/project/build.properties
@@ -2,7 +2,7 @@
 #Mon Apr 19 16:48:43 PDT 2010
 project.organization=com.codahale
 project.name=cassie
-sbt.version=0.7.3
+sbt.version=0.7.4
 project.version=0.1-SNAPSHOT
-build.scala.versions=2.8.0.Beta1 2.8.0.RC2
+build.scala.versions=2.8.0.Beta1 2.8.0.RC2 2.8.0.RC3
 project.initialize=false
