--- a/project/build.properties
+++ b/project/build.properties
@@ -4,5 +4,5 @@ project.organization=com.codahale
 project.name=cassie
 sbt.version=0.7.4
 project.version=0.1-SNAPSHOT
-build.scala.versions=2.8.0.Beta1 2.8.0.RC2 2.8.0.RC3
+build.scala.versions=2.8.0.RC3 2.8.0.Beta1 2.8.0.RC2
 project.initialize=false
