Add publishing, and remove the manual libthrift dependency

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
 #Mon Apr 19 16:48:43 PDT 2010
-project.organization=com.codahale
+project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.1-SNAPSHOT
+project.version=0.1
 build.scala.versions=2.8.0
 project.initialize=false
