--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Apr 19 16:48:43 PDT 2010
+#Thu Mar 03 11:50:08 PST 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.2.5
+project.version=0.3.0
 build.scala.versions=2.8.1
 project.initialize=false
