--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.3.0
+project.version=0.4.0-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
