--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Mar 28 21:48:06 PDT 2011
+#Mon Mar 28 21:49:39 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.4.0
+project.version=0.4.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
