--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Apr 05 16:11:38 PDT 2011
+#Tue Apr 19 17:02:55 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.5.1-SNAPSHOT
+project.version=0.5.1
 build.scala.versions=2.8.1
 project.initialize=false
