--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Apr 21 14:36:24 PDT 2011
+#Thu Apr 21 14:39:07 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.5.2
+project.version=0.5.3-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
