--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Apr 28 15:28:46 PDT 2011
+#Thu Apr 28 15:30:25 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.5.3
+project.version=0.5.4-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
