--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon May 09 14:06:21 PDT 2011
+#Mon May 09 14:06:57 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.6.1
+project.version=0.6.2-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
