org=com.twitter,name=cassie,version=0.6.1

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon May 09 14:05:40 PDT 2011
+#Mon May 09 14:06:21 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.6.1-SNAPSHOT
+project.version=0.6.1
 build.scala.versions=2.8.1
 project.initialize=false
