--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon May 09 16:39:31 PDT 2011
+#Tue May 17 13:31:23 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.7.1-SNAPSHOT
+project.version=0.7.1
 build.scala.versions=2.8.1
 project.initialize=false
