--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue May 17 14:08:42 PDT 2011
+#Tue May 17 17:41:11 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.7.3-SNAPSHOT
+project.version=0.7.3
 build.scala.versions=2.8.1
 project.initialize=false
