--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu May 26 14:53:23 PDT 2011
+#Thu May 26 14:54:15 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.8.0
+project.version=0.8.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
