--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Jun 10 10:25:39 PDT 2011
+#Fri Jun 10 10:26:27 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.9.0
+project.version=0.9.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
