--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Jun 10 10:26:27 PDT 2011
+#Tue Jun 14 18:40:34 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.9.1-SNAPSHOT
+project.version=0.9.1
 build.scala.versions=2.8.1
 project.initialize=false
