--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Jun 23 09:14:27 PDT 2011
+#Thu Jun 23 09:15:46 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.9.2
+project.version=0.9.3-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
