--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Jun 23 12:33:15 PDT 2011
+#Thu Jun 30 10:09:02 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.9.4-SNAPSHOT
+project.version=0.9.4
 build.scala.versions=2.8.1
 project.initialize=false
