--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Jun 16 14:05:57 PDT 2011
+#Mon Jul 11 17:47:26 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.10.0-SNAPSHOT
+project.version=0.10.0
 build.scala.versions=2.8.1
 project.initialize=false
