org=com.twitter,name=cassie,version=0.10.2-SNAPSHOT

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Jul 13 14:39:13 PDT 2011
+#Wed Jul 13 14:40:18 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.10.1
+project.version=0.10.2-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
