--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Jul 13 14:40:18 PDT 2011
+#Wed Jul 20 17:25:22 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.10.2-SNAPSHOT
+project.version=0.10.2
 build.scala.versions=2.8.1
 project.initialize=false
