org=com.twitter,name=cassie,version=0.11.0

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Jul 27 10:43:45 PDT 2011
+#Wed Jul 27 11:26:05 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.11.0-SNAPSHOT
+project.version=0.11.0
 build.scala.versions=2.8.1
 project.initialize=false
