--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Jul 27 11:26:05 PDT 2011
+#Wed Jul 27 11:27:23 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.11.0
+project.version=0.11.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
