--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Jul 29 16:01:50 PDT 2011
+#Fri Jul 29 16:01:55 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.12.0-SNAPSHOT
+project.version=0.12.0
 build.scala.versions=2.8.1
 project.initialize=false
