--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Sep 14 17:21:21 PDT 2011
+#Wed Sep 14 17:22:19 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.14.0
+project.version=0.14.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
