--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Sep 14 18:13:16 PDT 2011
+#Wed Sep 14 18:13:24 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.15.0-SNAPSHOT
+project.version=0.15.0
 build.scala.versions=2.8.1
 project.initialize=false
