--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Sep 15 12:03:58 PDT 2011
+#Thu Sep 15 12:04:57 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.16.0
+project.version=0.16.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
