[split] org=com.twitter,name=cassie,version=0.16.2-SNAPSHOT

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Oct 18 13:19:02 PDT 2011
+#Tue Oct 18 13:20:14 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.16.1
+project.version=0.16.2-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
