--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Oct 20 10:24:49 PDT 2011
+#Thu Oct 20 10:26:21 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.16.2
+project.version=0.16.3-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
