--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Oct 25 11:10:23 PDT 2011
+#Tue Oct 25 11:12:19 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.16.3
+project.version=0.16.4-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
