--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Oct 25 11:14:48 PDT 2011
+#Tue Oct 25 11:16:40 PDT 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.16.4
+project.version=0.16.5-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
