--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Nov 15 16:24:50 PST 2011
+#Tue Nov 15 16:26:38 PST 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.17.0
+project.version=0.17.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
