--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Dec 05 17:41:50 PST 2011
+#Mon Dec 05 17:43:27 PST 2011
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.17.1
+project.version=0.17.2-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
