[split] org=com.twitter,name=cassie,version=0.18.0

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Jan 11 10:11:49 PST 2012
+#Wed Jan 11 12:04:49 PST 2012
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.18.0-SNAPSHOT
+project.version=0.18.0
 build.scala.versions=2.8.1
 project.initialize=false
