--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Feb 14 11:26:26 PST 2012
+#Tue Feb 14 11:28:04 PST 2012
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.19.0
+project.version=0.19.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
