--- a/project/versions.properties
+++ b/project/versions.properties
@@ -6,7 +6,11 @@ finagle|finagle-thrift=com.twitter/finagle-thrift
 util|util-logging=com.twitter/util-logging
 com.twitter/finagle-thrift=2.0.0
 com.twitter/util-logging=2.0.0
+finagle|finagle-stress=com.twitter/finagle-stress
+com.twitter/finagle-ostrich4=2.0.0
 finagle|finagle-serversets=com.twitter/finagle-serversets
+com.twitter/finagle-stress=2.0.0
 util|util-core=com.twitter/util-core
 com.twitter/finagle-core=2.0.0
 com.twitter/finagle-serversets=2.0.0
+finagle|finagle-ostrich4=com.twitter/finagle-ostrich4
