--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Feb 17 17:01:14 PST 2012
+#Tue Mar 20 16:38:16 PDT 2012
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.19.2-SNAPSHOT
+project.version=0.19.2
 build.scala.versions=2.8.1
 project.initialize=false
