--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Mar 20 16:38:16 PDT 2012
+#Tue Mar 20 16:40:06 PDT 2012
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.19.2
+project.version=0.19.3-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
