[split] org=com.twitter,name=cassie,version=0.20.0

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Mar 20 16:40:06 PDT 2012
+#Tue Mar 20 17:30:26 PDT 2012
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.20.0-SNAPSHOT
+project.version=0.20.0
 build.scala.versions=2.8.1
 project.initialize=false
