--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Mar 20 17:30:26 PDT 2012
+#Tue Mar 20 17:32:17 PDT 2012
 project.organization=com.twitter
 project.name=cassie
 sbt.version=0.7.4
-project.version=0.20.0
+project.version=0.20.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
