--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,9 @@
-#Project properties
-#Tue Mar 20 17:32:17 PDT 2012
-project.organization=com.twitter
+#
+#Sun Apr 29 23:28:16 UTC 2012
 project.name=cassie
-sbt.version=0.7.4
+project.organization=com.twitter
 project.version=0.20.1-SNAPSHOT
+sbt.version=0.7.4
+def.scala.version=2.7.7
 build.scala.versions=2.8.1
 project.initialize=false
