--- a/cassie-serversets/pom.xml
+++ b/cassie-serversets/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.twitter</groupId>
     <artifactId>scala-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <relativePath>../../parents/scala-parent/pom.xml</relativePath>
   </parent>
   <properties>
@@ -20,10 +20,12 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
+      <version>0.20.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>finagle-serversets</artifactId>
+      <version>3.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
