--- a/cassie-stress/pom.xml
+++ b/cassie-stress/pom.xml
@@ -25,12 +25,12 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>finagle-ostrich4</artifactId>
-      <version>4.0.1</version>
+      <version>4.0.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>finagle-stress</artifactId>
-      <version>4.0.1</version>
+      <version>4.0.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
