--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.twitter</groupId>
   <artifactId>cassie</artifactId>
   <packaging>pom</packaging>
-  <version>0.21.0-SNAPSHOT</version>
+  <version>0.21.0</version>
   <distributionManagement>
     <repository>
       <id>artifactory-release</id>
