--- a/cassie-core/pom.xml
+++ b/cassie-core/pom.xml
@@ -87,6 +87,7 @@
             <thriftGenerator>finagle</thriftGenerator>
           </thriftGenerators>
         </configuration>
+        <version>0.0.3</version>
       </plugin>
     </plugins>
   </build>
