--- a/cassie-core/pom.xml
+++ b/cassie-core/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.twitter</groupId>
   <artifactId>cassie-core</artifactId>
   <packaging>jar</packaging>
-  <version>0.21.1</version>
+  <version>0.21.2-SNAPSHOT</version>
   <parent>
     <groupId>com.twitter</groupId>
     <artifactId>scala-parent</artifactId>
