--- a/cassie-hadoop/pom.xml
+++ b/cassie-hadoop/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.twitter</groupId>
   <artifactId>cassie-hadoop</artifactId>
   <packaging>jar</packaging>
-  <version>0.21.1</version>
+  <version>0.21.2-SNAPSHOT</version>
   <parent>
     <groupId>com.twitter</groupId>
     <artifactId>scala-parent</artifactId>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
-      <version>0.21.1</version>
+      <version>0.21.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
