--- a/cassie-stress/pom.xml
+++ b/cassie-stress/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.twitter</groupId>
   <artifactId>cassie-stress</artifactId>
   <packaging>jar</packaging>
-  <version>0.21.4</version>
+  <version>0.21.5-SNAPSHOT</version>
   <parent>
     <groupId>com.twitter</groupId>
     <artifactId>scala-parent</artifactId>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
-      <version>0.21.4</version>
+      <version>0.21.5-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.twitter</groupId>
