--- a/cassie-serversets/pom.xml
+++ b/cassie-serversets/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.twitter</groupId>
   <artifactId>cassie-serversets</artifactId>
   <packaging>jar</packaging>
-  <version>0.21.5</version>
+  <version>0.21.6-SNAPSHOT</version>
   <parent>
     <groupId>com.twitter</groupId>
     <artifactId>scala-parent</artifactId>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
-      <version>0.21.5</version>
+      <version>0.21.6-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.twitter</groupId>
