--- a/cassie-hadoop/pom.xml
+++ b/cassie-hadoop/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
-      <version>0.21.6-SNAPSHOT</version>
+      <version>0.21.5</version>
     </dependency>
   </dependencies>
 </project>
