--- a/cassie-stress/pom.xml
+++ b/cassie-stress/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
-      <version>0.21.6-SNAPSHOT</version>
+      <version>0.21.5</version>
     </dependency>
     <dependency>
       <groupId>com.twitter</groupId>
