[split] Fix version of util to the next "-snapshot"
RB_ID=85238

--- a/cassie-core/pom.xml
+++ b/cassie-core/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>util-core</artifactId>
-      <version>5.3.10</version>
+      <version>5.3.11-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
