--- a/cassie-hadoop/pom.xml
+++ b/cassie-hadoop/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>cassie-core</artifactId>
-      <version>0.25.0</version>
+      <version>0.25.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
